call api user sevice

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,14 +5,15 @@
             <div class="login-form mx-auto">
                 <h2 class="login-header">Đăng nhập</h2>
                 <div class="form-group">
-                    <label for="email">Email/Phone</label>
-                    <input type="text" class="form-control" id="email">
+                    <label for="phoneNumber">Phone</label>
+                    <input type="text" class="form-control" [(ngModel)]="phoneNumber" (input)="onPhoneNumberChange()"
+                        name="phone" (focus)="loginForm.form.markAsTouched()" id="phoneNumber">
                     <div class="divider-nospace"></div>
                 </div>
                 <div class="mt-5">
                     <div class="form-group password-field">
                         <label for="password">Mật khẩu</label>
-                        <input type="password" placeholder="Ít nhất 3 ký tự"
+                        <input type="password" [(ngModel)]="password" name="password" placeholder="Ít nhất 3 ký tự"
                             class="form-control" id="password">
                         <i class="password-toggle fas fa-eye-slash"></i>
                         <div class="divider-nospace"></div>
@@ -39,8 +40,8 @@
                 <button type="button" class="login-button">Đăng nhập</button>
                 <div class="divider"></div>
                 <p class="text-center">Bạn chưa đăng ký? <span>
-                    <a href="#" class="register-link">Tạo tài khoản</a>
-                </span></p>
+                        <a href="#" class="register-link">Tạo tài khoản</a>
+                    </span></p>
             </div>
         </div>
     </div>
