--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,13 +6,18 @@
                 <div class="login-form mx-auto">
                     <h2 class="login-header">Đăng ký</h2>
                     <div class="form-group">
-                        <label for="phone">Số điện thoại</label>
-                        <input type="text" class="form-control" [(ngModel)]="phone" (input)="onPhoneChange()"
-                            name="phone" (focus)="registerForm.form.markAsTouched()" required id="phone">
+                        <label for="phoneNumber">Số điện thoại</label>
+                        <input type="text" 
+                            class="form-control" 
+                            [(ngModel)]="phoneNumber"
+                            (input)="onPhoneNumberChange()"
+                            name="phone"
+                            (focus)="registerForm.form.markAsTouched()"
+                            required id="phoneNumber">
                         <div class="divider-nospace"></div>
-                        <p class="text-danger" *ngIf="phone.length < 6 && 
-                            registerForm.form.touched">
-                            Số điện thoại có ít nhất 6 ký tự</p>
+                        <p class="text-danger" 
+                            *ngIf="phoneNumber.length < 6 
+                            && registerForm.form.touched">Phone phải có ít nhất 6 ký tự</p>
                     </div>
                     <div class="mt-3"></div>
                     <div class="form-group password-field">
@@ -45,7 +50,8 @@
                     <div class="mt-3"></div>
                     <div class="form-group">
                         <label for="full-name">Họ và tên</label>
-                        <input type="text" [(ngModel)]="fullName" class="form-control" required id="full-name">
+                        <input type="text" [(ngModel)]="fullName" class="form-control" required name="fullName"
+                            id="full-name">
                         <div class="divider-nospace"></div>
                     </div>
                     <div class="form-group">
@@ -63,13 +69,14 @@
                     <div class="mt-3"></div>
                     <div class="form-group">
                         <label for="address">Địa chỉ</label>
-                        <input type="text" [(ngModel)]="address" class="form-control" id="address">
+                        <input type="text" [(ngModel)]="address" class="form-control" name="address" id="address">
                         <div class="divider-nospace"></div>
                     </div>
                     <div class="form-group">
                         <div class="form-check checkbox-text">
                             <span style="display: flex;">
-                                <input type="checkbox" [(ngModel)]="isAccepted" class="form-check-input" id="agree">
+                                <input type="checkbox" [(ngModel)]="isAccepted" class="form-check-input" name="agree"
+                                    id="agree">
                                 <label for="agree" class="form-check-label text-start">
                                     Tôi đồng ý với các điều kiện
                                 </label>
