--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -31,17 +31,18 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <select class="form-control access-right">
+                    <select class="form-control access-right"
+                        [(ngModel)]="selectedRole">
                         <option selected disabled>Quyền đăng nhập</option>
-                        <option>Người dùng</option>
-                        <option>Quản trị viên</option>
+                        <option *ngFor="let role of roles" [ngValue]="role">
+                            {{ role.name }}
+                        </option>
                     </select>
-                </div>
-                <button type="button" class="login-button">Đăng nhập</button>
+                  </div>
+                <button type="button" (click)="login()" class="login-button">Đăng nhập</button>
                 <div class="divider"></div>
                 <p class="text-center">Bạn chưa đăng ký? <span>
-                        <a href="#" class="register-link">Tạo tài khoản</a>
-                    </span></p>
+                        <a href="#" class="register-link">Tạo tài khoản</a></span></p>
             </div>
         </div>
     </div>
