--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -51,7 +51,7 @@
 .product-name{
     color: #fff;
 }
-.product-desc{
+.product-description {
     color: rgb(173, 178, 203);
 }
 .product-warranty{
@@ -71,4 +71,17 @@
 }
 .space-x{
     margin: 0 5px;
+}
+.page-number {
+    cursor: pointer;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    margin: 0 2px;
+    border-radius: 3px;
+}
+
+.page-number.active {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
 }
