--- a/src/app/components/datail-product/datail-product.component.html
+++ b/src/app/components/datail-product/datail-product.component.html
@@ -6,33 +6,33 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <div class="carousel slide" id="carouselEx" data-bs-ride="carousel">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div *ngFor="let image of product?.product_images; let i = index" class="carousel-item"
-              [ngClass]="{'active': i === currentImageIndex}">
-              <div class="square-image">
-                <img [src]="image.image_url" class="product-image" alt="Product Image">
-              </div>
+      <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div *ngFor="let image of product?.product_images; let i = index" 
+               class="carousel-item" [ngClass]="{'active': i === currentImageIndex}">
+            <div class="square-image">
+              <img [src]="image.image_url" class="product-image" alt="Product Image">
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev"
-            (click)="previousImage()">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next"
-            (click)="nextImage()">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
-        <div class="row">
-          <div class="thumbnail-container">
-            <div *ngFor="let image of product?.product_images; let i = index" class="thumbnail-item"
-              [ngClass]="{'active': i === currentImageIndex}" (click)="thumbnailClick(i)">
-              <img [src]="image.image_url" class="thumbnail-image" alt="Thumbnail Image">
-            </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" 
+                data-bs-slide="prev" (click)="previousImage()">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" 
+                data-bs-slide="next" (click)="nextImage()">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="row">
+        <div class="thumbnail-container">
+          <div *ngFor="let image of product?.product_images; let i = index" 
+               class="thumbnail-item" 
+               [ngClass]="{'active': i === currentImageIndex}"
+               (click)="thumbnailClick(i)">
+            <img [src]="image.image_url" class="thumbnail-image" alt="Thumbnail Image">
           </div>
         </div>
       </div>
@@ -54,7 +54,7 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    </div>      
+  </div>  
 </div>
 <app-footer></app-footer>
