--- a/src/app/components/order-confirm/order-confirm.component.html
+++ b/src/app/components/order-confirm/order-confirm.component.html
@@ -1,48 +1,67 @@
 <app-header></app-header>
 <div class="container">
-    <div class="confirmation-container">
-        <h1>Xác nhận đơn hàng</h1>
-        <p>Cảm ơn bạn đã đặt hàng! Dưới đây là thông tin chi tiết về đơn hàng của bạn</p>
+    <div class="intro-section">
+        <h1>Chi tiết đơn hàng</h1>
+        <p>Xem thông tin chi tiết đơn hàng</p>
     </div>
-    <div class="row">
-        <table>
-            <thead>
-                <tr>
-                    <th scope="col" class="text-start">Sản phẩm</th>
-                    <th scope="col">Số lượng</th>
-                    <th scope="col">Đơn giá</th>
-                    <th scope="col">Tổng giá</th>
-                </tr>
-            </thead>
-            <tbody>
-                <ng-container *ngFor="let item of cartItems">
+    <!-- Thông tin người nhận -->
+    <div *ngIf="orderResponse" class="row">
+        <div class="col-md-6">
+            <h2 class="product-header">Thông tin người nhận</h2>
+            <div class="mb-3">
+                <p class="form-label">Họ và tên: {{ orderResponse.fullname }}</p>
+            </div>
+            <!-- Các trường thông tin khác -->
+            <div class="mb-3">
+                <p class="form-label">Email: {{ orderResponse.email }}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Số điện thoại: {{ orderResponse.phone_number }}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Địa chỉ: {{ orderResponse.address }}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Ghi chú: {{ orderResponse.note }}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Phương thức vận chuyển: {{ orderResponse.shipping_method }}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Phương thức thanh toán: {{ orderResponse.payment_method }}</p>
+            </div>                        
+        </div>
+
+        <!-- Sản phẩm đã đặt hàng -->
+        <div class="col-md-6">
+            <h2 class="product-order">Sản phẩm đã đặt hàng</h2>
+            <table>
+                <thead>
                     <tr>
+                        <th scope="col" class="text-start">Sản phẩm</th>
+                        <th scope="col">Số lượng</th>
+                        <th scope="col">Đơn giá</th>
+                        <th scope="col">Tổng giá</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of orderResponse.order_details">
                         <td>
                             <div class="product-info">
                                 <img [src]="item.product.thumbnail" alt="Product Image" class="product-image">
                                 <span class="product-name">{{ item.product.name }}</span>
                             </div>
                         </td>
-                        <td>{{ item.quantity }}</td>
-                        <td>{{ item.product.price | currency:'VND':'symbol':'1.0-0' | slice: 1 }}₫</td>
-                        <td>{{ (item.product.price * item.quantity) | currency:'VND':'symbol':'1.0-0' | slice: 1 }}₫</td>
+                        <td>{{ item.number_of_products }}</td>
+                        <td>{{ item.price | currency:'VND':'symbol':'1.0-0' | slice: 1 }}₫</td>
+                        <td>{{ item.total_money | currency:'VND':'symbol':'1.0-0' | slice: 1 }}₫</td>
                     </tr>
-                </ng-container>
-            </tbody>
-        </table>
-    </div>
-    <!-- Ô nhập mã giảm giá -->
-    <div class="input-group mb-3 mt-3 col-6">
-        <input type="text" class="form-control" [(ngModel)]="couponCode" placeholder="Mã giảm giá">
-        <div class="input-group-append" style="margin-left: 10px;">
-            <button class="btn btn-outline-secondary" type="button" (click)="applyCoupon()">Áp dụng mã</button>
+                </tbody>
+            </table>
+            <div class="text-start mt-3">
+                <h4 class="header-text text-end">Tổng giá: {{ orderResponse.total_money | currency:'VND':'symbol':'1.0-0' | slice: 1 }}₫</h4>
+            </div>            
         </div>
-    </div>
-
-    <!-- Hiển thị tổng tiền sau khi áp dụng giảm giá -->
-    <p class="mb-0">Tổng tiền: {{ totalAmount | currency:'VND':'symbol':'1.0-0' | slice: 1 }}₫</p>
-    <div class="text-center mt-3">
-        <button class="btn btn-gradient" type="button">Đặt hàng</button>
     </div>
 </div>
 <app-footer></app-footer>
