--- a/src/app/components/order-confirm/order-confirm.component.scss
+++ b/src/app/components/order-confirm/order-confirm.component.scss
@@ -1,44 +1,47 @@
-.container{
-    color: #fff;
+.container {
+    color: white;
 }
-.confirmation-container{
+.confirmation-container {
     margin: 50px auto;
     padding: 20px;
-    max-width: 600px;
+    max-width: 600px;            
     border-radius: 10px;
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
 }
-.product-info{
+.product-info {
     display: flex;
     align-items: center;
 }
-.product-image{
+
+.product-image {
     width: 100px;
     height: 100px;
     border-radius: 5px;
     margin-right: 10px;
 }
-.product-name{
-    color: #fff;
+
+.product-name {
+    color: white;
     margin-right: 10px;
 }
-table{
+table {
     width: 100%;
     border-radius: 10px;
     border: none;
     border-collapse: separate;
-    border: 1px solid #fff;
-    border-spacing: 0;
-    background-color: rgb(12, 13, 54);
+    border: 1px solid white;
+    border-spacing: 0;    
+    background-color: rgb(12, 13, 54);    
 }
+
 th,
-td{
+td {
     padding: 10px;
     text-align: center;
 }
-.btn-gradient{
-    background: linear-gradient(to right, rgb(255, 64, 180), rgb(126, 43, 237));
-    color: #fff;
+.btn-gradient {
+    background: linear-gradient(to right, rgb(225, 64, 180), rgb(126, 43, 237));
+    color: white;
     border-radius: 30px;
     width: 200px;
 }
