Update Order & Login

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,4 @@
+@import '../../styles/shared-styles.scss';
 .intro-section{
     text-align: center;
     color: #fff;
@@ -15,63 +16,82 @@
 .product-category option{
     background-color: rgb(19, 23, 42);
 }
-.search-input{
+.search-input {
     width: 300px;
-    background-color: rgb(19, 23, 42);
+    background-color: $shopapp-background-color;
     margin-right: 10px;
     border-color: rgba(255, 255, 255, 0.5);
-    color: #fff;
+    color: white;
 }
-.form-control{
+
+.form-control {
     background-color: transparent;
-    color: #fff;
+    color: white;
 }
-.form-control::placeholder{
+
+.form-control::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: rgba(255, 255, 255, 0.5);
     opacity: 1;
+    /* Firefox */
 }
-.form-control:-ms-input-placeholder{
+
+.form-control:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
     color: rgba(255, 255, 255, 0.5);
 }
-.form-control::-ms-input-placeholder{
+
+.form-control::-ms-input-placeholder {
+    /* Microsoft Edge */
     color: rgba(255, 255, 255, 0.5);
 }
-.product-item{
-    background-color: rgb(19, 23, 42);
+
+.product-item {
+    background-color: $shopapp-background-color;
     border: 1px solid rgb(35, 39, 61);
     border-radius: 20px;
     padding: 20px;
     margin-bottom: 20px;
 }
-.product-image{
+
+.product-image {
     width: 100%;
     height: auto;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
-.product-name{
-    color: #fff;
+
+.product-name {
+    color: white;
 }
+
 .product-description {
     color: rgb(173, 178, 203);
 }
-.product-warranty{
-    color: rgb(242, 126, 212);
+
+.product-warranty {
+    color: $shopapp-tint-color;
 }
-.product-price{
-    color: #fff;
+
+.product-price {
+    color: white;
 }
-.product-rating{
-    color: #ffd700;
+
+.product-rating {
+    color: #FFD700;
     margin-top: 10px;
 }
-.product-actions{
+
+.product-actions {
     display: flex;
     justify-content: center;
     margin-top: 20px;
 }
-.space-x{
+
+.space-x {
     margin: 0 5px;
+    /*margin-top, margin-right, margin-bottom, margin-left*/
 }
+
 .page-number {
     cursor: pointer;
     padding: 5px 10px;
@@ -81,7 +101,14 @@
 }
 
 .page-number.active {
-    background-color: #007bff;
+    background-color: $shopapp-color !important;
     color: #fff;
-    border-color: #007bff;
+    border-color: $shopapp-color !important;
+}
+.btn-primary {
+    background-color: $shopapp-color;
+    border-color: $shopapp-color;    
+}
+.btn.btn-primary {
+    margin-left: 10px;
 }
