--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -6,7 +6,7 @@
                 <div class="login-form mx-auto">
                     <h2 class="register-header">Đăng ký</h2>
                     <div class="form-group">
-                        <label for="phoneNumber">Phone's number</label>
+                        <label for="phoneNumber">Số điện thoại</label>
                         <input type="text" class="form-control" [(ngModel)]="phoneNumber"
                             (input)="onPhoneNumberChange()" name="phone" (focus)="registerForm.form.markAsTouched()"
                             required id="phoneNumber">
