--- a/src/app/components/datail-product/datail-product.component.scss
+++ b/src/app/components/datail-product/datail-product.component.scss
@@ -1,3 +1,4 @@
+@import '../../styles/shared-styles.scss';
 .intro-section {
     color: white;
     padding: 20px;
@@ -9,7 +10,6 @@
     width: 100%;
     object-fit: cover;
 }
-
 .thumbnail-container {
     display: flex;
     justify-content: space-between;
@@ -36,9 +36,8 @@
 }
 
 .thumbnail-item.active {
-    border: 4px solid rgba(104, 197, 134, 0.74);
+    border: 4px solid $shopapp-tint-color;
 }
-
 .product-details {
     color: white;
     padding: 20px;
@@ -53,27 +52,25 @@
 .product-actions button {
     margin-right: 10px;
 }
-
 .border-wrapper {
-    border: 1px solid white;
-}
+    border: 1px solid white;      
+  }
 
-.product-quantity {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 10px;
-}
+  .product-quantity {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      margin-top: 10px;
+  }
 
-.product-quantity button {
-    background-color: transparent;
-    border: none;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.product-quantity input {
+  .product-quantity button {
+      background-color: transparent;
+      border: none;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+  }
+  .product-quantity input {
     background-color: transparent;
     border: none;
     color: white;
@@ -81,8 +78,7 @@
     text-align: center;
     width: 40px;
     margin: 0 10px;
-}
-
-.product-quantity input:focus {
+  }
+  .product-quantity input:focus {
     outline: none;
-}
+  }  
