--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,9 +1,11 @@
-.container{
-    color: #fff;
+@import '../../styles/shared-styles.scss';
+
+.container {
+    color: white;
     height: 100vh;
 }
-.login-form{
-    background-color: rgb(12, 12, 55);
+.login-form {
+    background-color: $shopapp-background-color;
     border-radius: 10px;
     padding: 20px;
     max-width: 500px;
@@ -11,81 +13,100 @@
     align-items: center;
     justify-content: center;
 }
-.login-header{
+.login-header {
     text-align: center;
-    color: rgb(105, 244, 181);
+    color: $shopapp-title-color;
     margin-bottom: 20px;
 }
-.form-control{
+.form-control {
     background-color: transparent;
     border: none;
-    color: #fff;
+    color: white;
 }
-.divider-nospace{
-    border-top: 1px solid #fff;
+.form-control:focus {
+    color: white;
+    background-color: transparent;
+    outline: none;
+    border-color: transparent;    
 }
-.password-field{
+  
+.divider-nospace {
+    border-top: 1px solid white;
+}
+
+.password-field {
     position: relative;
 }
-.password-toggle{
+.password-toggle {
     position: absolute;
     top: 50%;
     right: 10px;
     transform: translateY(-50%);
-    color: rgb(105, 244, 181);
+    color: $shopapp-title-color;
     cursor: pointer;
 }
-.checkbox-text{
+.checkbox-text {
     color: rgb(243, 165, 42);
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
 }
-.checkbox-text input[type="checkbox"]:checked{
-    border-color: #fff;
-    background-color: rgb(233, 66, 178);
+/* Màu checkbox khi được chọn */
+.checkbox-text input[type="checkbox"]:checked {
+    border-color: white;
+    background-color: $shopapp-tint-color;
 }
-.form-check-input{
+
+.form-check-input {
     margin-right: 5px;
 }
-.register-link{
-    color: rgb(105, 244, 181);
+
+.register-link {
+    color: $shopapp-title-color;
     text-decoration: none;
 }
-.form-control{
-    background-color: rgb(12, 12, 55);
-}
-.access-right{
+.access-right {
     margin-top: 20px;
     width: 200px;
-    color: #fff;
-    border: 1px solid rgb(225, 64, 180);
+    color: white;
+    background-color: $shopapp-background-color !important;
+    border: 1px solid $shopapp-tint-color;
 }
-.access-right:focus{
-    border: 1px solid rgb(225, 64, 180);
+
+.access-right:focus {
+    border: 1px solid $shopapp-tint-color;
 }
-.form-control::placeholder{
+
+.form-control::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: rgba(243, 165, 42, 0.4);
     opacity: 1;
+    /* Firefox */
 }
-.form-control:-ms-input-placeholder{
+
+.form-control:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
     color: rgba(243, 165, 42, 0.4);
 }
-.form-control::-ms-input-placeholder{
+
+.form-control::-ms-input-placeholder {
+    /* Microsoft Edge */
     color: rgba(243, 165, 42, 0.4);
 }
-.login-button{
-    background: linear-gradient(to right, rgb(225, 64, 180), rgb(126, 43, 237));
-    color: #fff;
+
+.login-button {
+    background: linear-gradient(to right, $shopapp-tint-color, $shopapp-color);
+    color: white;
     border-radius: 30px;
     width: 100%;
     padding: 10px 0;
     margin-top: 20px;
     border: none;
 }
-.divider{
+.divider {
     height: 1px;
     background-color: rgb(243, 165, 42);
+    /* background-color: rgb(105, 244, 181) */
     margin: 20px;
 }
