--- a/src/app/components/order/order.component.scss
+++ b/src/app/components/order/order.component.scss
@@ -1,60 +1,78 @@
-.container{
-    color: #fff;;
+@import '../../styles/shared-styles.scss';
+
+.container {
+    color: white;
 }
-.intro-section{
-    text-align: center;
-    color: #fff;
+
+.intro-section {
+    color: white;
     padding: 20px;
+    text-align: center;
 }
-.product-header{
-    color: rgb(233, 66, 176);
+
+.product-header {
+    color: $shopapp-tint-color;
 }
-.form-control{
-    background-color: rgb(19, 23, 42);
+
+.form-control {
+    background-color: $shopapp-background-color;
     border: 1px solid rgb(29, 33, 54);
-    color: #fff;
+    color: white;
 }
-.form-control:focus{
-    border-color: #fff;
-    background-color: rgb(19, 23, 42);
+
+.form-control:focus {
+    border-color: white;
+    background-color: $shopapp-background-color;
 }
-.form-label{
-    color: #fff;
+
+.form-label {
+    color: white;
 }
-.product-order{
-    color: rgb(105, 244, 181);
+
+.product-header {
+    color: $shopapp-tint-color;
 }
-table{
+
+.product-order {
+    color: $shopapp-title-color;
+}
+
+table {
     width: 100%;
     border-radius: 10px;
     border: none;
     border-collapse: separate;
-    border: 1px solid #fff;
+    border: 1px solid white;
     border-spacing: 0;
-    background-color: rgb(12, 13, 54);
+    background-color: $shopapp-background-color;
 }
+
 th,
-td{
+td {
     padding: 10px;
     text-align: center;
 }
-.product-info{
+
+.product-info {
     display: flex;
     align-items: center;
 }
-.product-image{
+
+.product-image {
     width: 100px;
     height: 100px;
     border-radius: 5px;
     margin-right: 10px;
 }
-.product-name{
-    color: #fff;
+
+.product-name {
+    color: white;
     margin-right: 10px;
 }
-.btn-gradient{
-    background: linear-gradient(to right, rgb(255, 64, 180), rgb(126, 43, 237));
-    color: #fff;
+
+.btn-gradient {
+    background: linear-gradient(to right, rgb(225, 64, 180), $shopapp-color);
+    color: white;
     border-radius: 30px;
     width: 200px;
 }
