--- a/src/app/components/datail-product/datail-product.component.html
+++ b/src/app/components/datail-product/datail-product.component.html
@@ -41,7 +41,7 @@
       <div class="product-details">
         <h2>{{ product?.name }}</h2>
         <p>{{ product?.description }}</p>
-        <p>Giá: ${{ product?.price }}</p>
+        <p>Giá: {{ product?.price | currency:'VND':'symbol':'1.0-0' | slice: 1}}₫</p>
         <div class="product-actions">
           <button class="btn btn-primary" (click)="addToCart()">Thêm vào giỏ hàng</button>
           <button class="btn btn-success" (click)="buyNow()">Mua ngay</button>
