--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,3 @@
-
 <app-header></app-header>
 <div class="container">
     <div class="intro-section">
@@ -8,25 +7,22 @@
     </div>
     <!--Đoạn này có 1 ô searchbox bên trái, 1 combobox bên phải  -->
     <div class="search-box">
-        <input type="text" class="form-control search-input" 
-            placeholder="Tìm sản phẩm" 
-            [(ngModel)]="keyword">
-        <select class="form-control product-category"             
-            [(ngModel)]="selectedCategoryId">
-            <option [value]="0">Tất cả</option> 
+        <input type="text" class="form-control search-input" placeholder="Tìm sản phẩm" [(ngModel)]="keyword">
+        <select class="form-control product-category" [(ngModel)]="selectedCategoryId">
+            <option [value]="0">Tất cả</option>
             <option *ngFor="let category of categories" [value]="category.id">
                 {{ category.name }}
             </option>
         </select>
-        <button class="btn btn-primary ml-2" (click)="searchProducts()">Tìm kiếm</button>
-    </div>        
+        <button class="btn btn-primary" (click)="searchProducts()">Tìm kiếm</button>
+    </div>
     <div class="row">
         <div class="col-lg-4 col-md-6" *ngFor="let product of products">
             <div class="product-item" (click)="onProductClick(product.id)">
                 <img [src]="product.url" alt="Product Image" class="product-image">
                 <h3 class="product-name">{{ product.name }}</h3>
                 <p class="product-description">{{ product.description }}</p>
-                <p class="product-price">Giá: {{ product.price | currency:'VND':'symbol':'1.0-0' | slice: 1 }}₫</p>                
+                <p class="product-price">Giá: {{ product.price | currency:'VND':'symbol':'1.0-0' | slice: 1  }}₫</p>
             </div>
         </div>
     </div>
@@ -55,5 +51,5 @@
         </ul>
     </nav>
 </div>
-      
+
 <app-footer></app-footer>
